--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.org/
+baseURL: https://abhishekchoudhary.com.np
 languageCode: en-us
 title: "Shreemaan Abhishek"
 theme: ["PaperMod"]
